--- a/debian/rules
+++ b/debian/rules
@@ -1,9 +1,7 @@
 #!/usr/bin/make -f
 
-#include /usr/share/pkg-kde-tools/makefiles/1/list-missing.mk
-
 %:
-	dh $@ --parallel --dbg-package=muon-dbg --with kde
+	dh $@ --dbg-package=muon-dbg --with kde --parallel
 
-override_dh_makeshlibs:
-	dh_makeshlibs -Xusr/lib/kde4/ -V
+override_dh_auto_test:
+	# Do nothing
