--- a/debian/control
+++ b/debian/control
@@ -5,12 +5,22 @@ Maintainer: Debian/Kubuntu KDE Extras Team <pkg-kde-extras@lists.alioth.debian.o
 Uploaders: Sune Vuorela <sune@debian.org>
 Build-Depends: cmake,
                debhelper (>= 9.0.0~),
-               kdelibs5-dev,
-               libdebconf-kde-dev,
-               libqapt-dev (>= 1.4.0),
-               libqjson-dev,
-               libqoauth-dev,
-               libqzeitgeist-dev,
+               extra-cmake-modules,
+               libdebconf-kde-dev (>= 1.0.0),
+               libkf5attica-dev,
+               libkf5config-dev,
+               libkf5configwidgets-dev,
+               libkf5coreaddons-dev,
+               libkf5dbusaddons-dev,
+               libkf5declarative-dev,
+               libkf5i18n-dev,
+               libkf5newstuff-dev,
+               libkf5notifications-dev,
+               libkf5solid-dev,
+               libkf5wallet-dev,
+               libkf5widgetsaddons-dev,
+               libphonon4qt5-dev,
+               libqapt-dev (>= 3.0.0),
                pkg-config,
                pkg-kde-tools (>= 0.5.0)
 Standards-Version: 3.9.2
