--- a/debian/control
+++ b/debian/control
@@ -3,16 +3,26 @@ Section: kde
 Priority: optional
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 XSBC-Original-Maintainer: Jonathan Thomas <echidnaman@kubuntu.org>
-Build-Depends: debhelper (>= 9), pkg-kde-tools (>= 0.5.0), cmake,
- pkg-config, kdelibs5-dev, libqapt-dev (>= 2.1.70), libdebconf-kde-dev,
- libqjson-dev, libqoauth-dev, libattica-dev
+Build-Depends: cmake,
+               debhelper (>= 9),
+               kdelibs5-dev,
+               libattica-dev,
+               libdebconf-kde-dev,
+               libqapt-dev (>= 2.1.70),
+               libqjson-dev,
+               libqoauth-dev,
+               pkg-config,
+               pkg-kde-tools (>= 0.5.0)
 Standards-Version: 3.9.4
 Homepage: https://projects.kde.org/projects/extragear/sysadmin/muon/
 
 Package: muon
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libqapt2-runtime,
- apt-xapian-index, libmuonprivate2 (= ${binary:Version})
+Depends: apt-xapian-index,
+         libmuonprivate2 (= ${binary:Version}),
+         libqapt2-runtime,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Recommends: muon-updater
 Description: package manager for KDE
  Muon is a graphical package manager for KDE.
@@ -45,8 +55,12 @@ Description: Muon package manager suite (common data files)
 
 Package: muon-installer
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libqapt2-runtime,
- app-install-data, apt-xapian-index, libmuonprivate2 (= ${binary:Version})
+Depends: app-install-data,
+         apt-xapian-index,
+         libmuonprivate2 (= ${binary:Version}),
+         libqapt2-runtime,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Recommends: app-install-data-partner
 Description: Utility for browsing, installing, and removing applications
  The Muon Software Center lets you browse and install thousands of
@@ -60,9 +74,13 @@ Description: Utility for browsing, installing, and removing applications
 
 Package: muon-discover
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, muon-common (= ${source:Version}),
- libqapt2-runtime,
- app-install-data, apt-xapian-index, libmuonprivate2 (= ${binary:Version})
+Depends: app-install-data,
+         apt-xapian-index,
+         libmuonprivate2 (= ${binary:Version}),
+         libqapt2-runtime,
+         muon-common (= ${source:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Recommends: app-install-data-partner, ubuntu-sso-client
 Description: Utility for browsing, installing, and removing applications
  Muon Discover will help you browse through the huge applications library you
@@ -73,8 +91,10 @@ Description: Utility for browsing, installing, and removing applications
 
 Package: muon-updater
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libqapt2-runtime,
- libmuonprivate2 (= ${binary:Version})
+Depends: libmuonprivate2 (= ${binary:Version}),
+         libqapt2-runtime,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Recommends: muon-notifier
 Description: update manager for KDE
  Muon Updater is a graphical update manager for KDE. It is part of the Muon
@@ -82,9 +102,12 @@ Description: update manager for KDE
 
 Package: muon-notifier
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, muon-common (= ${source:Version}),
- muon-updater,
- ubuntu-release-upgrader-qt, update-notifier-common
+Depends: muon-common (= ${source:Version}),
+         muon-updater,
+         ubuntu-release-upgrader-qt,
+         update-notifier-common,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: update notifier for KDE
  The Muon Notifier is an update notification daemon for KDE. It uses the KDE
  Daemon frame (KDED) framework to present the user with update notifications,
@@ -93,9 +116,9 @@ Description: update notifier for KDE
 
 Package: libmuonprivate2
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, kdesudo, software-properties-kde
-Breaks: muon-installer (<< 1.3.65-0ubuntu2), libmuonprivate1
-Replaces: muon-installer (<< 1.3.65-0ubuntu2), libmuonprivate1
+Depends: kdesudo, software-properties-kde, ${misc:Depends}, ${shlibs:Depends}
+Breaks: libmuonprivate1, muon-installer (<< 1.3.65-0ubuntu2)
+Replaces: libmuonprivate1, muon-installer (<< 1.3.65-0ubuntu2)
 Description: Runtime files for the Muon package management suite
  The Muon package management suite is a collection of package management
  applications built on the KDE platform.
@@ -106,10 +129,10 @@ Package: muon-dbg
 Section: debug
 Architecture: any
 Priority: extra
-Depends: ${misc:Depends}, libmuonprivate2 (= ${binary:Version}),
- muon (= ${binary:Version}) | muon-updater (= ${binary:Version}) |
- muon-notifier (= ${binary:Version})
-Recommends: qapt-dbg, kdelibs5-dbg
+Depends: libmuonprivate2 (= ${binary:Version}),
+         muon (= ${binary:Version}) | muon-updater (= ${binary:Version}) | muon-notifier (= ${binary:Version}),
+         ${misc:Depends}
+Recommends: kdelibs5-dbg, qapt-dbg
 Description: Muon debugging symbols
  This package contains debugging symbols for Muon.
  When Muon crashes, in most cases this package is
