--- a/debian/control
+++ b/debian/control
@@ -4,13 +4,23 @@ Priority: optional
 Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 XSBC-Original-Maintainer: Jonathan Thomas <echidnaman@kubuntu.org>
 Build-Depends: cmake,
-               debhelper (>= 9),
-               kdelibs5-dev,
-               libattica-dev,
-               libdebconf-kde-dev,
-               libqapt-dev (>= 2.1.70),
-               libqjson-dev,
-               libqoauth-dev,
+               debhelper (>= 9.0.0~),
+               extra-cmake-modules,
+               libkf5attica-dev,
+               libkf5config-dev,
+               libkf5configwidgets-dev,
+               libkf5coreaddons-dev,
+               libkf5dbusaddons-dev,
+               libkf5declarative-dev,
+               libkf5i18n-dev,
+               libkf5newstuff-dev,
+               libkf5notifications-dev,
+               libkf5solid-dev,
+               libkf5wallet-dev,
+               libkf5widgetsaddons-dev,
+               libphonon4qt5-dev,
+               libphonon4qt5experimental-dev,
+               libqca-qt5-2-dev,
                pkg-config,
                pkg-kde-tools (>= 0.5.0)
 Standards-Version: 3.9.4
@@ -19,8 +29,8 @@ Homepage: https://projects.kde.org/projects/extragear/sysadmin/muon/
 Package: muon
 Architecture: any
 Depends: apt-xapian-index,
-         libmuonprivate2 (= ${binary:Version}),
-         libqapt2-runtime,
+         libmuon (= ${binary:Version}),
+         libqapt3-runtime,
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: muon-updater
@@ -46,38 +56,17 @@ Description: package manager for KDE
 Package: muon-common
 Architecture: all
 Depends: ${misc:Depends}
-Breaks: muon-discover (<< 2.2.0-0ubuntu5~)
-Replaces: muon-discover (<< 2.2.0-0ubuntu5~)
 Description: Muon package manager suite (common data files)
  Muon is a graphical package manager for the Plasma workspace.
  .
  This package contains data files shared by various parts of the Muon suite.
 
-Package: muon-installer
-Architecture: any
-Depends: app-install-data,
-         apt-xapian-index,
-         libmuonprivate2 (= ${binary:Version}),
-         libqapt2-runtime,
-         ${misc:Depends},
-         ${shlibs:Depends}
-Recommends: app-install-data-partner
-Description: Utility for browsing, installing, and removing applications
- The Muon Software Center lets you browse and install thousands of
- applications available for Ubuntu. You can view available
- applications by category, or search quickly by name or description.
- You can also examine the applications already installed, and remove
- those you no longer need.
- .
- To install or remove software using the Center, you need administrator
- access on the computer.
-
 Package: muon-discover
 Architecture: any
 Depends: app-install-data,
          apt-xapian-index,
-         libmuonprivate2 (= ${binary:Version}),
-         libqapt2-runtime,
+         libmuon (= ${binary:Version}),
+         libqapt3-runtime,
          muon-common (= ${source:Version}),
          ${misc:Depends},
          ${shlibs:Depends}
@@ -91,8 +80,8 @@ Description: Utility for browsing, installing, and removing applications
 
 Package: muon-updater
 Architecture: any
-Depends: libmuonprivate2 (= ${binary:Version}),
-         libqapt2-runtime,
+Depends: libmuon (= ${binary:Version}),
+         libqapt3-runtime,
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: muon-notifier
@@ -114,7 +103,7 @@ Description: update notifier for KDE
  providing an opportunity to launch the Muon Updater to deal with these
  updates.
 
-Package: libmuonprivate2
+Package: libmuon
 Architecture: any
 Depends: kdesudo, software-properties-kde, ${misc:Depends}, ${shlibs:Depends}
 Breaks: libmuonprivate1, muon-installer (<< 1.3.65-0ubuntu2)
@@ -129,7 +118,7 @@ Package: muon-dbg
 Section: debug
 Architecture: any
 Priority: extra
-Depends: libmuonprivate2 (= ${binary:Version}),
+Depends: libmuon (= ${binary:Version}),
          muon (= ${binary:Version}) | muon-updater (= ${binary:Version}) | muon-notifier (= ${binary:Version}),
          ${misc:Depends}
 Recommends: kdelibs5-dbg, qapt-dbg
