--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ XSBC-Original-Maintainer: Jonathan Thomas <echidnaman@kubuntu.org>
 Build-Depends: cmake,
                debhelper (>= 9.0.0~),
                extra-cmake-modules,
+               libdebconf-kde-dev (>= 1.0.0),
                libkf5attica-dev,
                libkf5config-dev,
                libkf5configwidgets-dev,
@@ -20,9 +21,12 @@ Build-Depends: cmake,
                libkf5widgetsaddons-dev,
                libphonon4qt5-dev,
                libphonon4qt5experimental-dev,
+               libqapt-dev (>= 3.0.0),
                libqca-qt5-2-dev,
+               libqt5svg5-dev (>= 5.2.0),
                pkg-config,
-               pkg-kde-tools (>= 0.5.0)
+               pkg-kde-tools (>= 0.5.0),
+               qtdeclarative5-dev (>= 5.2.0)
 Standards-Version: 3.9.4
 Homepage: https://projects.kde.org/projects/extragear/sysadmin/muon/
 
