--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Build-Depends: cmake,
                libkf5widgetsaddons-dev,
                libphonon4qt5-dev,
                libphonon4qt5experimental-dev,
-               libqapt-dev (>= 3.0.0),
+               libqapt-dev,
                libqca-qt5-2-dev,
                libqt5svg5-dev (>= 5.2.0),
                pkg-config,
