--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Build-Depends: cmake,
                libkf5dbusaddons-dev,
                libkf5declarative-dev,
                libkf5i18n-dev,
+               libkf5kdelibs4support-dev,
                libkf5newstuff-dev,
                libkf5notifications-dev,
                libkf5solid-dev,
