--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,9 @@
 #!/usr/bin/make -f
 
-%:
-	dh $@ --dbg-package=muon-dbg --with kde --parallel
+include /usr/share/pkg-kde-tools/qt-kde-team/3/debian-qt-kde.mk
 
-override_dh_auto_test:
-	# Do nothing
+override_dh_strip:
+	$(overridden_command) --dbg-package=muon-dbg
+
+# FIXME: tests are broken at this time
+.PHONY: override_dh_autotest
