--- a/debian/rules
+++ b/debian/rules
@@ -6,4 +6,4 @@ override_dh_strip:
 	$(overridden_command) --dbg-package=muon-dbg
 
 # FIXME: tests are broken at this time
-.PHONY: override_dh_autotest
+.PHONY: override_dh_auto_test
