--- a/debian/control
+++ b/debian/control
@@ -27,6 +27,7 @@ Build-Depends: cmake,
                libqt5svg5-dev (>= 5.2.0),
                pkg-config,
                pkg-kde-tools (>= 0.5.0),
+               plasma-framework-dev,
                qtdeclarative5-dev (>= 5.2.0)
 Standards-Version: 3.9.4
 Homepage: https://projects.kde.org/projects/extragear/sysadmin/muon/
