--- a/debian/rules
+++ b/debian/rules
@@ -2,6 +2,8 @@
 
 include /usr/share/pkg-kde-tools/qt-kde-team/3/debian-qt-kde.mk
 
+DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
+
 override_dh_strip:
 	$(overridden_command) --dbg-package=muon-dbg
 
@@ -12,7 +14,7 @@ override_dh_strip:
 # 'backend' which makes for bogus, pointless, silly shlibs entries.
 # Couldn't be bothered to report this - sitter, 2015
 override_dh_makeshlibs:
-	$(overridden_command) -Xusr/lib/*/qt5/plugins/muon* -V
+	$(overridden_command) -Xusr/lib/$(DEB_HOST_MULTIARCH)/qt5/plugins/muon* -V
 
 # FIXME: tests are broken at this time
 .PHONY: override_dh_auto_test
