releasing package muon version 4:5.1.95+git20150120-0ubuntu1

--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Build-Depends: cmake,
                libkf5widgetsaddons-dev,
                libphonon4qt5-dev,
                libphonon4qt5experimental-dev,
-               libqapt-dev,
+               libqapt-dev (>= 3.0.0),
                libqca-qt5-2-dev,
                libqt5svg5-dev (>= 5.2.0),
                pkg-config,
