--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,8 @@ Section: kde
 Priority: optional
 Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Maximiliano Curia <maxy@debian.org>
-Build-Depends: cmake,
-               debhelper (>= 9.0.0~),
+Build-Depends: cmake (>= 2.8.12),
+               debhelper (>= 9),
                extra-cmake-modules,
                libdebconf-kde-dev (>= 1.0.0),
                libkf5attica-dev,
@@ -26,7 +26,7 @@ Build-Depends: cmake,
                libqca-qt5-2-dev,
                libqt5svg5-dev (>= 5.2.0),
                pkg-config,
-               pkg-kde-tools (>= 0.5.0),
+               pkg-kde-tools (>= 0.15.16),
                plasma-framework-dev,
                qtdeclarative5-dev (>= 5.2.0)
 Standards-Version: 3.9.6
