--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Uploaders: Maximiliano Curia <maxy@debian.org>
 Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 9),
                extra-cmake-modules,
+               kinit-dev,
                libdebconf-kde-dev (>= 1.0.0),
                libkf5attica-dev,
                libkf5config-dev,
