--- a/debian/control
+++ b/debian/control
@@ -29,6 +29,7 @@ Build-Depends: cmake (>= 2.8.12),
                pkg-config,
                pkg-kde-tools (>= 0.15.16),
                plasma-framework-dev,
+               qtbase5-dev (>= 5.2.0~),
                qtdeclarative5-dev (>= 5.2.0)
 Standards-Version: 3.9.6
 Homepage: https://projects.kde.org/projects/kde/workspace/muon
