--- a/debian/control
+++ b/debian/control
@@ -25,12 +25,12 @@ Build-Depends: cmake (>= 2.8.12),
                libphonon4qt5experimental-dev,
                libqapt-dev (>= 3.0.0),
                libqca-qt5-2-dev,
-               libqt5svg5-dev (>= 5.2.0),
+               libqt5svg5-dev (>= 5.4.0~),
                pkg-config,
                pkg-kde-tools (>= 0.15.16),
                plasma-framework-dev,
-               qtbase5-dev (>= 5.2.0~),
-               qtdeclarative5-dev (>= 5.2.0)
+               qtbase5-dev (>= 5.4.0~),
+               qtdeclarative5-dev (>= 5.4.0~)
 Standards-Version: 3.9.6
 Homepage: https://projects.kde.org/projects/kde/workspace/muon
 Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/plasma/muon.git
