Update build-deps and deps with the info from cmake

--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.6.0),
                kinit-dev,
+               kio-dev,
                libdebconf-kde-dev (>= 1.0.0),
                libkf5attica-dev,
                libkf5config-dev,
@@ -15,6 +16,8 @@ Build-Depends: cmake (>= 2.8.12),
                libkf5dbusaddons-dev,
                libkf5declarative-dev,
                libkf5i18n-dev,
+               libkf5iconthemes-dev,
+               libkf5itemviews-dev,
                libkf5kdelibs4support-dev,
                libkf5newstuff-dev,
                libkf5notifications-dev,
