--- a/debian/control
+++ b/debian/control
@@ -30,7 +30,9 @@ Build-Depends: cmake,
                plasma-framework-dev,
                qtdeclarative5-dev (>= 5.2.0)
 Standards-Version: 3.9.6
-Homepage: https://projects.kde.org/projects/extragear/sysadmin/muon/
+Homepage: https://projects.kde.org/projects/kde/workspace/muon/
+Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/plasma/muon.git
+Vcs-Git: git://anonscm.debian.org/pkg-kde/plasma/muon.git
 
 Package: muon
 Architecture: any
