--- a/debian/control
+++ b/debian/control
@@ -118,7 +118,7 @@ Description: update notifier for KDE
 
 Package: libmuon
 Architecture: any
-Depends: kdesudo,
+Depends: policykit-1,
          python3,
          software-properties-kde,
          ${misc:Depends},
