Update build-deps and deps with the info from cmake

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: cmake (>= 2.8.12),
                kinit-dev,
                kio-dev,
                libdebconf-kde-dev (>= 1.0.0),
+               libkf5archive-dev,
                libkf5attica-dev,
                libkf5config-dev,
                libkf5configwidgets-dev,
@@ -22,6 +23,7 @@ Build-Depends: cmake (>= 2.8.12),
                libkf5newstuff-dev,
                libkf5notifications-dev,
                libkf5solid-dev,
+               libkf5textwidgets-dev,
                libkf5wallet-dev,
                libkf5widgetsaddons-dev,
                libphonon4qt5-dev,
