--- a/debian/control
+++ b/debian/control
@@ -28,7 +28,7 @@ Build-Depends: cmake (>= 2.8.12),
                libkf5widgetsaddons-dev,
                libphonon4qt5-dev,
                libphonon4qt5experimental-dev,
-               libqapt-dev (>= 3.0.0),
+               libqapt-dev (>= 3.0.2),
                libqca-qt5-2-dev,
                libqt5svg5-dev (>= 5.4.0~),
                pkg-config,
@@ -36,7 +36,7 @@ Build-Depends: cmake (>= 2.8.12),
                plasma-framework-dev,
                qtbase5-dev (>= 5.4.0~),
                qtdeclarative5-dev (>= 5.4.0~)
-Standards-Version: 3.9.6
+Standards-Version: 3.9.8
 Homepage: https://projects.kde.org/projects/kde/workspace/muon
 Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/plasma/muon.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/plasma/muon.git
@@ -44,8 +44,8 @@ Vcs-Git: git://anonscm.debian.org/pkg-kde/plasma/muon.git
 Package: muon
 Architecture: any
 Depends: apt-xapian-index,
-         libmuon (= ${binary:Version}),
-         libqapt3-runtime,
+         libqapt3 (>= 3.0.2),
+         libqapt3-runtime (>= 3.0.2),
          ${misc:Depends},
          ${shlibs:Depends}
 Recommends: muon-updater
@@ -67,80 +67,3 @@ Description: package manager for KDE
     removals
   * Support for download the latest changelog of a package
   * Package screenshots
-
-Package: muon-common
-Architecture: all
-Depends: ${misc:Depends}
-Description: Muon package manager suite (common data files)
- Muon is a graphical package manager for the Plasma workspace.
- .
- This package contains data files shared by various parts of the Muon suite.
-
-Package: muon-discover
-Architecture: any
-Depends: apt-xapian-index,
-         libmuon (= ${binary:Version}),
-         libqapt3-runtime,
-         muon-common (= ${source:Version}),
-         ${misc:Depends},
-         ${shlibs:Depends}
-Description: Utility for browsing, installing, and removing applications
- Muon Discover will help you browse through the huge applications library you
- have available and help you find the applications you're looking for.
- .
- To install or remove software using the Center, you need administrator
- access on the computer.
-
-Package: muon-updater
-Architecture: any
-Depends: libmuon (= ${binary:Version}),
-         libqapt3-runtime,
-         ${misc:Depends},
-         ${shlibs:Depends}
-Recommends: muon-notifier
-Description: update manager for KDE
- Muon Updater is a graphical update manager for KDE. It is part of the Muon
- family of software and provides an interface similar to that of Muon.
-
-Package: muon-notifier
-Architecture: any
-Depends: muon-common (= ${source:Version}),
-         muon-updater,
-         ${misc:Depends},
-         ${shlibs:Depends}
-Description: update notifier for KDE
- The Muon Notifier is an update notification daemon for KDE. It uses the KDE
- Daemon frame (KDED) framework to present the user with update notifications,
- providing an opportunity to launch the Muon Updater to deal with these
- updates.
-
-Package: libmuon
-Architecture: any
-Depends: policykit-1,
-         python3,
-         software-properties-kde,
-         ${misc:Depends},
-         ${shlibs:Depends}
-Breaks: libmuonprivate1, libmuonprivate2, muon-installer (<< 1.3.65-0ubuntu2)
-Replaces: libmuonprivate1, libmuonprivate2, muon-installer (<< 1.3.65-0ubuntu2)
-Description: Runtime files for the Muon package management suite
- The Muon package management suite is a collection of package management
- applications built on the KDE platform.
- .
- This package contains runtime libraries
-
-Package: muon-dbg
-Section: debug
-Priority: extra
-Architecture: any
-Depends: libmuon (= ${binary:Version}),
-         muon (= ${binary:Version}) | muon-updater (= ${binary:Version}) | muon-notifier (= ${binary:Version}),
-         ${misc:Depends}
-Recommends: qapt-dbg
-Description: Muon debugging symbols
- This package contains debugging symbols for Muon.
- When Muon crashes, in most cases this package is
- needed to get a backtrace that is useful for developers. If you have
- experienced a Muon crash without this package
- installed, please install it, try to reproduce the problem and fill a bug
- report with a new backtrace attached.
