Use the new kf dev names
Gbp-Dch: Ignore

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,6 @@ Build-Depends: cmake (>= 2.8.12),
                debhelper (>= 9),
                extra-cmake-modules (>= 1.6.0),
                kinit-dev,
-               kio-dev,
                libdebconf-kde-dev (>= 1.0.0),
                libkf5archive-dev,
                libkf5attica-dev,
@@ -20,8 +19,10 @@ Build-Depends: cmake (>= 2.8.12),
                libkf5iconthemes-dev,
                libkf5itemviews-dev,
                libkf5kdelibs4support-dev,
+               libkf5kio-dev,
                libkf5newstuff-dev,
                libkf5notifications-dev,
+               libkf5plasma-dev,
                libkf5solid-dev,
                libkf5textwidgets-dev,
                libkf5wallet-dev,
@@ -33,7 +34,6 @@ Build-Depends: cmake (>= 2.8.12),
                libqt5svg5-dev (>= 5.4.0~),
                pkg-config,
                pkg-kde-tools (>= 0.15.16),
-               plasma-framework-dev,
                qtbase5-dev (>= 5.4.0~),
                qtdeclarative5-dev (>= 5.4.0~)
 Standards-Version: 3.9.8
